# stackql-mcp-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pr.md  talk.md
.github/workflows/: ci.yml
auditron/: Cargo.toml
auditron/src/: engine.rs  explain.rs  main.rs  pack.rs  report.rs  tui.rs
controls/: github-core.yaml
examples/: fetch_bundle.rs  launcher.rs  minimal.rs
src/: acquire.rs  bundle.rs  cache.rs  download.rs  error.rs  launch.rs  lib.rs  pins.rs  platform.rs
stackql-agent/: Cargo.toml  README.md
stackql-agent/src/: main.rs  persona.rs
tests/: conformance.rs
