[package]
name = "auditron"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false
description = "Terminal compliance copilot: point-in-time control checks with auditor-ready evidence packs, on an embedded StackQL MCP server"
license = "MIT"

[features]
default = []
# Single-binary build: embed the .mcpb at compile time via
# STACKQL_MCP_BUNDLE_FILE (see stackql_mcp::fetch_bundle).
vendored = ["stackql-mcp/vendored"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
csv = "1"
ratatui = "0.29"
rmcp = { version = "1.7", default-features = false, features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
stackql-mcp = { path = ".." }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
ureq = { version = "3", features = ["json"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
